# Simple-Blog-App

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  app.py  posts.json  pyproject.toml  test.py  users.json
.github/workflows/: ci.yml
src/: __init__.py  app.py  auth.py  blog.py  users.json  util.py
src/database/: db.py  db_wrapper.py  models.py  schema.sql
src/static/: main.js
src/templates/: index.html  login.html  register.html  write_post.html
templates/: index.html  login.html  new_post.html  register.html
tests/: app_test.py  db_fixture_test.py  db_wrapper_test.py  hello_test.py  olddb_wrapper_test.py  simple_test.py  test_app.py  test_db_fixture.py
