[project]
name = "Simple-Blog-App"
version = "0.1.0"
description = "A simple Flask-based blog app"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dotenv>=0.9.9",
    "flask>=3.1.0",
    "gunicorn>=23.0.0",
    "passlib>=1.7.4",
    "psycopg2-binary>=2.9.10",
    "pytest>=8.3.5",
    "pytz>=2025.2",
]

[start]
